--- a/day130/main.css
+++ b/day130/main.css
@@ -69,6 +69,7 @@ header p {
     color: #bbb;
     width: 30rem;
     margin: auto;
+    font-weight: 300;
 }
 
 main {
@@ -78,8 +79,17 @@ main {
     max-height: 90%;
     max-width: 960px;
     margin: 0 auto;
-    padding: 3rem;
-    flex: 2;
+    flex: 1;
+}
+
+footer {
+    text-align: center;
+    margin: 4rem auto 1rem;
+    flex: 1;
+    letter-spacing: 1px;
+    font-size: 1rem;
+    font-weight: 300;
+    color: #bbb;
 }
 
 /* controls styling */
@@ -105,7 +115,6 @@ main {
     width: 500px;
     height: 500px;
     background: transparent;
-    /* border: 1px solid slateblue; */
 }
 
 
@@ -309,9 +318,23 @@ main {
     border-bottom-right-radius: 30%;
 }
 
-@media (max-width: 500px) {
- main {
-     background: red;
-     flex-direction: column;
- }
+@media screen and (max-width: 600px) {
+    main {
+        flex-direction: column;
+    }
+    .container {
+        width: 400px;
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    html {
+        font-size: 8px;
+    }
+
+    .container {
+        width: 375px;
+        height: 375px;
+    }
 }
