--- a/day131/style.css
+++ b/day131/style.css
@@ -25,7 +25,6 @@ main {
   flex-wrap: wrap;
   flex: 1;
   max-width: 1100px;
-  width: 1100px;
   margin: auto;
 }
 
@@ -42,7 +41,7 @@ footer {
 .scene {
   width: 300px;
   height: 300px;
-  margin: 1rem;
+  margin: 2rem auto;
   perspective: 500px;
 }
 
@@ -74,7 +73,8 @@ footer {
   width: 100%;
   background: #fff;
   color: #03446a;
-  font-size: 6rem;
+  font-size: 4.5rem;
+  padding: 1.5rem;
   font-family: 'Lily Script One', cursive;
   text-align: center;
   border-radius: 0.5rem;
