--- a/day133/main.css
+++ b/day133/main.css
@@ -33,10 +33,12 @@ body {
   font-size: 20px;
   background-size: cover;
   background-position: center;
+  filter: grayscale(1);
   transition:
         font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
         flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-        background 0.2s;
+        background 0.2s,
+        filter 0.5s;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -80,6 +82,7 @@ body {
 .panel.open {
   flex: 5;
   font-size: 40px;
+  filter: grayscale(0);
 }
 
 @media only screen and (max-width: 600px) {
